Added generate variable tag. Universally support quoted variable tag locators/parameters.